--- a/localisation/japanese/phi_l_japanese.yml
+++ b/localisation/japanese/phi_l_japanese.yml
@@ -45,6 +45,8 @@ opinion_hegemon: "Xenophobe Federation"
 opinion_potential_ally: "Potential Ally (lagger)"
 opinion_our_bbeg: "Our BBEG"
 opinion_bbeg: "Big Bad Evil Guy"
+opinion_bbeg_vassals: "BBEGの臣下"
+opinion_our_bbeg_overlord: "我らの上位BBEG"
 
 #Casus Belli & War Goals
 war_goal_wg_phi_survive: "Survive"
@@ -976,3 +978,4 @@ civic_machine_despoilers_desc:0 "$civic_barbaric_despoilers_desc$"
 edict_archeologist_spedition: "考古学調査"
 edict_archeologist_spedition_desc: "考古学調査を開始すると、帝国内であるアイテムを見つける可能性があります。"
 phi_pm_atmospheric_pollution: "大気汚染"
+mod_habitat_pop_job_trade_mult: "Commercio $mod_habitat_jobs_produces_mult$"
