--- a/localisation/braz_por/phi_l_braz_por.yml
+++ b/localisation/braz_por/phi_l_braz_por.yml
@@ -45,6 +45,8 @@ opinion_hegemon: "Xenophobe Federation"
 opinion_potential_ally: "Potential Ally (lagger)"
 opinion_our_bbeg: "Our BBEG"
 opinion_bbeg: "Big Bad Evil Guy"
+opinion_bbeg_vassals: "Vassalo do BBEG"
+opinion_our_bbeg_overlord: "Nosso senhor BBEG"
 
 #Casus Belli & War Goals
 war_goal_wg_phi_survive: "Survive"
@@ -977,3 +979,4 @@ civic_machine_despoilers_desc:0 "$civic_barbaric_despoilers_desc$"
 edict_archeologist_spedition: "Expedição arqueológica"
 edict_archeologist_spedition_desc: "Ao iniciar uma expedição arqueológica, poderíamos encontrar artefatos dentro de nosso império."
 phi_pm_atmospheric_pollution: "Poluição atmosférica"
+mod_habitat_pop_job_trade_mult: "Comércio $mod_habitat_jobs_produces_mult$"
