Fix upkeep building pop assembly.

--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -978,3 +978,5 @@ edict_archeologist_spedition: "Archeologist spedition"
 edict_archeologist_spedition_desc: "By starting an archaeological spedition, we could find some artifacts within our empire."
 phi_pm_atmospheric_pollution: "Atmospheric pollution"
 mod_habitat_pop_job_trade_mult: "Trade $mod_habitat_jobs_produces_mult$"
+d_small_research: "small research"
+d_medium_research: "medium_research"
