--- a/localisation/spanish/phi_l_spanish.yml
+++ b/localisation/spanish/phi_l_spanish.yml
@@ -980,3 +980,5 @@ edict_archeologist_spedition: "Expedición arqueológica"
 edict_archeologist_spedition_desc: "Al iniciar una expedición arqueológica, podríamos encontrar artefactos dentro de nuestro imperio."
 phi_pm_atmospheric_pollution: "Contaminación atmosférica"
 mod_habitat_pop_job_trade_mult: "$mod_habitat_jobs_produces_mult$的贸易"
+d_small_research: "small research"
+d_medium_research: "medium_research"
