--- a/localisation/braz_por/phi_l_braz_por.yml
+++ b/localisation/braz_por/phi_l_braz_por.yml
@@ -980,3 +980,12 @@ edict_archeologist_spedition: "Expedição arqueológica"
 edict_archeologist_spedition_desc: "Ao iniciar uma expedição arqueológica, poderíamos encontrar artefatos dentro de nosso império."
 phi_pm_atmospheric_pollution: "Poluição atmosférica"
 mod_habitat_pop_job_trade_mult: "Comércio $mod_habitat_jobs_produces_mult$"
+d_small_research: "pequena pesquisa"
+d_medium_research: "pesquisa média"
+
+building_machine_assembly_complex_3:0 "Complexo de Montagem de Máquinas Giga"
+building_machine_assembly_complex_3_desc:0 "Uma fábrica avançada de montagem gigante onde novas unidades são construídas."
+tech_mega_assembly_Mk2:0 "Sistemas de Montagem Giga"
+tech_mega_assembly_Mk2_desc:0 "Modelos avançados de montagem gigante nos permitem aumentar drasticamente a produção de novas unidades."
+edict_greater_than_ourselves_light:0 "Realocação Livre"
+edict_greater_than_ourselves_light_desc:1 "Estimula a realocação voluntária de populações desempregadas para planetas adequados com empregos e habitação dentro do nosso império."
