--- a/localisation/german/phi_l_german.yml
+++ b/localisation/german/phi_l_german.yml
@@ -980,3 +980,12 @@ edict_archeologist_spedition: "Archäologische Expedition"
 edict_archeologist_spedition_desc: "Durch die Durchführung einer archäologischen Expedition könnten wir einige Artefakte innerhalb unseres Reiches finden."
 phi_pm_atmospheric_pollution: "Luftverschmutzung"
 mod_habitat_pop_job_trade_mult: "Handel $mod_habitat_jobs_produces_mult$"
+d_small_research: "kleine Forschung"
+d_medium_research: "mittlere Forschung"
+
+building_machine_assembly_complex_3:0 "Giga-Maschinenmontage-Komplex"
+building_machine_assembly_complex_3_desc:0 "Ein fortgeschrittener Montagebetrieb im Giga-Format, in dem neue Einheiten hergestellt werden."
+tech_mega_assembly_Mk2:0 "Giga-Montagesysteme"
+tech_mega_assembly_Mk2_desc:0 "Fortgeschrittene Giga-Vorlagen ermöglichen es uns, die Montage neuer Einheiten drastisch zu erhöhen."
+edict_greater_than_ourselves_light:0 "Freie Umsiedlung"
+edict_greater_than_ourselves_light_desc:1 "Fördert die freiwillige Umsiedlung arbeitsloser Populationen auf geeignete Planeten mit Arbeitsplätzen und Wohnraum innerhalb unseres Imperiums."
