--- a/localisation/italian/phi_l_italian.yml
+++ b/localisation/italian/phi_l_italian.yml
@@ -988,3 +988,12 @@ edict_archeologist_spedition: "Spedizione archeologica"
 edict_archeologist_spedition_desc: "Avviando una spedizione archeologica, potremmo scoprire artefatti all'interno del nostro impero."
 phi_pm_atmospheric_pollution: "Inquinamento atmosferico"
 mod_habitat_pop_job_trade_mult: "Commercio $mod_habitat_jobs_produces_mult$"
+d_small_research: "ricerca piccola"
+d_medium_research: "ricerca media"
+
+building_machine_assembly_complex_3:0 "Complesso di assemblaggio di macchine Giga"
+building_machine_assembly_complex_3_desc:0 "Una fabbrica avanzata di assemblaggio di dimensioni gigantesche dove vengono costruite nuove unità."
+tech_mega_assembly_Mk2:0 "Sistemi di assemblaggio Giga"
+tech_mega_assembly_Mk2_desc:0 "I modelli avanzati di assemblaggio gigante ci consentono di aumentare drasticamente la produzione di nuove unità."
+edict_greater_than_ourselves_light:0 "Ricollocazione libera"
+edict_greater_than_ourselves_light_desc:1 "Incentiva la ricollocazione volontaria delle popolazioni disoccupate su pianeti adeguati con lavoro e alloggi all'interno del nostro impero."
