--- a/localisation/japanese/phi_l_japanese.yml
+++ b/localisation/japanese/phi_l_japanese.yml
@@ -979,3 +979,12 @@ edict_archeologist_spedition: "考古学調査"
 edict_archeologist_spedition_desc: "考古学調査を開始すると、帝国内であるアイテムを見つける可能性があります。"
 phi_pm_atmospheric_pollution: "大気汚染"
 mod_habitat_pop_job_trade_mult: "Commercio $mod_habitat_jobs_produces_mult$"
+d_small_research: "小規模な研究"
+d_medium_research: "中規模な研究"
+
+building_machine_assembly_complex_3:0 "ギガマシンアセンブリコンプレックス"
+building_machine_assembly_complex_3_desc:0 "新しいユニットが構築されるギガの高度なアセンブリプラント。"
+tech_mega_assembly_Mk2:0 "ギガアセンブリシステム"
+tech_mega_assembly_Mk2_desc:0 "ギガの高度なテンプレートにより、新しいユニットのアセンブリを劇的に増やすことができます。"
+edict_greater_than_ourselves_light:0 "自由移住"
+edict_greater_than_ourselves_light_desc:1 "無職の人口が、雇用と住居がある適切な惑星に自発的に移住するよう促します。"
