--- a/localisation/korean/phi_l_korean.yml
+++ b/localisation/korean/phi_l_korean.yml
@@ -980,3 +980,12 @@ edict_archeologist_spedition: "고고학 조사"
 edict_archeologist_spedition_desc: "고고학 조사를 시작하면 우리 제국 내에서 어떤 유물을 발견할 수 있습니다."
 phi_pm_atmospheric_pollution: "대기 오염"
 mod_habitat_pop_job_trade_mult: "$mod_habitat_jobs_produces_mult$의 거래"
+d_small_research: "소규모 연구"
+d_medium_research: "중규모 연구"
+
+building_machine_assembly_complex_3:0 "기가 기계 조립 복합체"
+building_machine_assembly_complex_3_desc:0 "새로운 유닛이 구성되는 기가급 선진 조립 공장입니다."
+tech_mega_assembly_Mk2:0 "기가 조립 시스템"
+tech_mega_assembly_Mk2_desc:0 "고급 기가 템플릿을 사용하여 새로운 유닛의 조립을 대폭 증가시킬 수 있습니다."
+edict_greater_than_ourselves_light:0 "자유 이주"
+edict_greater_than_ourselves_light_desc:1 "실직한 인구가 제국 내에서 직업과 주거지가 있는 적합한 행성으로 자발적으로 이주하도록 장려합니다."
