--- a/localisation/polish/phi_l_polish.yml
+++ b/localisation/polish/phi_l_polish.yml
@@ -980,3 +980,12 @@ edict_archeologist_spedition: "Wyprawa archeologiczna"
 edict_archeologist_spedition_desc: "Rozpoczynając wyprawę archeologiczną, moglibyśmy znaleźć artefakty w obrębie naszego imperium."
 phi_pm_atmospheric_pollution: "zanieczyszczenie atmosferyczne"
 mod_habitat_pop_job_trade_mult: "Handel $mod_habitat_jobs_produces_mult$"
+d_small_research: "małe badania"
+d_medium_research: "średnie badania"
+
+building_machine_assembly_complex_3:0 "Kompleks Montażowy Giga dla Maszyn"
+building_machine_assembly_complex_3_desc:0 "Zaawansowana fabryka montażu w gigantycznym rozmiarze, gdzie produkowane są nowe jednostki."
+tech_mega_assembly_Mk2:0 "Systemy Montażowe Giga"
+tech_mega_assembly_Mk2_desc:0 "Zaawansowane szablony montażu gigantów pozwalają nam drastycznie zwiększyć montaż nowych jednostek."
+edict_greater_than_ourselves_light:0 "Wolna przeprowadzka"
+edict_greater_than_ourselves_light_desc:1 "Zachęca bezrobotnych ludzi do dobrowolnej przeprowadzki na odpowiednie planety z pracą i mieszkaniem w naszym imperium."
