--- a/localisation/simp_chinese/phi_l_simp_chinese.yml
+++ b/localisation/simp_chinese/phi_l_simp_chinese.yml
@@ -979,3 +979,12 @@ edict_archeologist_spedition: "考古学考察"
 edict_archeologist_spedition_desc: "开展考古学考察,我们可能在帝国内发现一些文物。"
 phi_pm_atmospheric_pollution: "大气污染"
 mod_habitat_pop_job_trade_mult: "$mod_habitat_jobs_produces_mult$的贸易"
+d_small_research: "小型研究"
+d_medium_research: "中型研究"
+
+building_machine_assembly_complex_3:0 "千兆机器组装复合体"
+building_machine_assembly_complex_3_desc:0 "一座超级先进的组装厂，用于制造新装置。"
+tech_mega_assembly_Mk2:0 "千兆组装系统"
+tech_mega_assembly_Mk2_desc:0 "超级先进的模板使我们能够大幅提高新装置的组装速度。"
+edict_greater_than_ourselves_light:0 "自由移民"
+edict_greater_than_ourselves_light_desc:1 "鼓励失业人口自愿迁移到我们帝国内的合适星球，提供工作和住房。"
