--- a/localisation/spanish/phi_l_spanish.yml
+++ b/localisation/spanish/phi_l_spanish.yml
@@ -980,5 +980,12 @@ edict_archeologist_spedition: "Expedición arqueológica"
 edict_archeologist_spedition_desc: "Al iniciar una expedición arqueológica, podríamos encontrar artefactos dentro de nuestro imperio."
 phi_pm_atmospheric_pollution: "Contaminación atmosférica"
 mod_habitat_pop_job_trade_mult: "$mod_habitat_jobs_produces_mult$的贸易"
-d_small_research: "small research"
-d_medium_research: "medium_research"
+d_small_research: "investigación pequeña"
+d_medium_research: "investigación mediana"
+
+building_machine_assembly_complex_3:0 "Complejo de Ensamblaje de Máquinas Giga"
+building_machine_assembly_complex_3_desc:0 "Una planta avanzada de ensamblaje gigante donde se construyen nuevas unidades."
+tech_mega_assembly_Mk2:0 "Sistemas de Ensamblaje Giga"
+tech_mega_assembly_Mk2_desc:0 "Las plantillas avanzadas de ensamblaje gigante nos permiten aumentar drásticamente el ensamblaje de nuevas unidades."
+edict_greater_than_ourselves_light:0 "Reasentamiento libre"
+edict_greater_than_ourselves_light_desc:1 "Fomenta que las poblaciones desempleadas se reubiquen voluntariamente en planetas adecuados con empleo y vivienda dentro de nuestro imperio."
