--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -59,17 +59,12 @@ wg_phi_plunder_accept_them: "Involves a raid on §Y[From.GetName]§! , reducing 
 wg_phi_plunder_accept_them_hm: "Involves a raid on  §Y[From.GetName]§! , reducing their §YMineral§!, §YEnergy§!, §YFood§! and §YAlloys§! production for §Y10§! years"
 wg_phi_plunder_accept_them_as: "Involves a raid on §Y[From.GetName]§! , reducing their §YMineral§!, §YEnergy§! adnd §YAlloys§! production and pop have reduction happines for §Y10§! years"
 wg_phi_plunder_accept_us:0 "§Y[Root.GetName]§! gains for every pop of §Y[From.GetName]§! : \n§G+50§! £energy£\n§G+20§! £alloys£, £minerals£ £unity£, £physics_research£, £society_research£, £engineering_research£ \n§Y10%§! random pop will be §Rabducted§!"
-wg_phi_plunder_accept_us_hiveMind:0 "§Y[Root.GetName]§! gains for every pop of §Y[From.GetName]§! :\n§G+50§! £food£, £minerals£\n§G+20§! £energy£, £alloys£, £unity£, £physics_research£, £society_research£, £engineering_research£ \n§Y5%§! random pop will be §Rkilled§!"
+wg_phi_plunder_accept_us_hiveMind:0 "§Y[Root.GetName]§! gains for every pop of §Y[From.GetName]§! :\n§G+50§! £food£, £minerals£\n§G+20§! £energy£, £alloys£, £unity£, £physics_research£, £society_research£, £engineering_research£ \n§Y5%§! random pop will be §Rabducted§!"
 
-wg_phi_plunder_accept_us_machine:0 "§Y[Root.GetName]§! gains for every pop of §Y[From.GetName]§! :\n§G+50§! £energy£, £minerals£, £alloys£\n§G+20§! £unity£, £society_research£ \n§Y5%§! random pop will be §Rkilled§!"
+wg_phi_plunder_accept_us_machine:0 "§Y[Root.GetName]§! gains for every pop of §Y[From.GetName]§! :\n§G+50§! £energy£, £minerals£, £alloys£\n§G+20§! £unity£, £society_research£ \n§Y5%§! random pop will be §Rabducted§!"
 
 wg_phi_plunder_accept_us_assimilator:0 "§Y[Root.GetName]§! gains for every pop of §Y[From.GetName]§! :\n§G+50§! £energy£, £minerals, £alloys£\n§G+20§! £unity£, £physics_research£, £society_research£, £engineering_research£ \n§Y10%§! random pop will be §Yabducted§! and will §RASSIMILATE"
 
-wg_phi_plunder_accept_us_1:0 "§Y[Root.GetName]§! gains:\n§G+500§! £energy£, £minerals£\n§G+250§! £alloys£, £unity£, £physics_research£, £society_research£, £engineering_research£"
-wg_phi_plunder_accept_us_2:0 "§Y[Root.GetName]§! gains:\n§G+1000§! £energy£, £minerals£\n§G+500§! £alloys£, £unity£, £physics_research£, £society_research£, £engineering_research£\n§G1§! random pop will be abducted"
-wg_phi_plunder_accept_us_3:0 "§Y[Root.GetName]§! gains:\n§G+2000§! £energy£, £minerals£\n§G+1000§! £alloys£, £unity£, £physics_research£, £society_research£, £engineering_research£\n§G3§! random pops will be abducted"
-wg_phi_plunder_accept_us_4:0 "§Y[Root.GetName]§! gains:\n§G+4000§! £energy£, £minerals£\n§G+2000§! £alloys£, £unity£, £physics_research£, £society_research£, £engineering_research£\n§G7§! random pops will be abducted"
-wg_phi_plunder_accept_us_5:0 "§Y[Root.GetName]§! gains:\n§G+8000§! £energy£, £minerals£\n§G+4000§! £alloys£, £unity£, £physics_research£, £society_research£, £engineering_research£\n§G10§! random pops will be abducted"
 
 #Artifacts and Decisions
 artifact_buy_black_market:0 "Buy from the Black Market"
@@ -979,4 +974,11 @@ edict_archeologist_spedition_desc: "By starting an archaeological spedition, we 
 phi_pm_atmospheric_pollution: "Atmospheric pollution"
 mod_habitat_pop_job_trade_mult: "Trade $mod_habitat_jobs_produces_mult$"
 d_small_research: "small research"
-d_medium_research: "medium_research"
+d_medium_research: "medium research"
+
+building_machine_assembly_complex_3:0 "Giga Machine Assembly Complex"
+building_machine_assembly_complex_3_desc:0 "An giga advanced assembly plant where new units are constructed."
+tech_mega_assembly_Mk2:0 "Giga-Assembly Systems"
+tech_mega_assembly_Mk2_desc:0 "Giga-Advanced templates allow us to drastically increase the assembly of new units."
+edict_greater_than_ourselves_light:0 "Free resettlement"
+edict_greater_than_ourselves_light_desc:1 "Encourages free unemployed pops to voluntarily resettle themselves to suitable planets with jobs and housing within our empire."
