--- a/localisation/french/phi_l_french.yml
+++ b/localisation/french/phi_l_french.yml
@@ -506,7 +506,7 @@ edict_phi_set_survive_wg_desc: "Set the §YSurvive§! War Goal to every defensiv
 edict_phi_set_conquest_wg: "Punish the offender!"
 edict_phi_set_conquest_wg_desc: "Set the §YConquest§! War Goal to every defensive wars in which we are the main defender."
 
-phi_education_campaign_tooltip: "Every owned §Yleader§! gets §Y+5§! experience per month."
+phi_education_campaign_tooltip: "Every owned §Yleader§! gets §Y+3§! experience per month."
 
 edict_abdicate: "Abdicate"
 edict_abdicate_desc: "The time has come."
@@ -991,3 +991,4 @@ tech_mega_assembly_Mk2_desc:0 "Des modèles avancés d'assemblage gigantesque no
 edict_greater_than_ourselves_light:0 "Réinstallation libre"
 edict_greater_than_ourselves_light_desc:1 "Encourage la réinstallation volontaire des populations sans emploi sur des planètes appropriées avec des emplois et un logement au sein de notre empire."
 tr_domination_colonial_viceroys_desc:0 "Les §YDirigeants§! et les §YGouverneurs§! commencent au niveau §Y3§!."
+origin_tooltip_doomsday_effects:2 "§G- ATTENTION : Origine facile§!"
