--- a/localisation/korean/phi_l_korean.yml
+++ b/localisation/korean/phi_l_korean.yml
@@ -506,7 +506,7 @@ edict_phi_set_survive_wg_desc: "Set the §YSurvive§! War Goal to every defensiv
 edict_phi_set_conquest_wg: "Punish the offender!"
 edict_phi_set_conquest_wg_desc: "Set the §YConquest§! War Goal to every defensive wars in which we are the main defender."
 
-phi_education_campaign_tooltip: "Every owned §Yleader§! gets §Y+5§! experience per month."
+phi_education_campaign_tooltip: "Every owned §Yleader§! gets §Y+3§! experience per month."
 
 edict_abdicate: "Abdicate"
 edict_abdicate_desc: "The time has come."
@@ -990,3 +990,4 @@ tech_mega_assembly_Mk2_desc:0 "고급 기가 템플릿을 사용하여 새로운
 edict_greater_than_ourselves_light:0 "자유 이주"
 edict_greater_than_ourselves_light_desc:1 "실직한 인구가 제국 내에서 직업과 주거지가 있는 적합한 행성으로 자발적으로 이주하도록 장려합니다."
 tr_domination_colonial_viceroys_desc:0 "§Y지도자§!와 §Y독재자§!는 §Y3§! 레벨에서 시작합니다."
+origin_tooltip_doomsday_effects:2 "§G- 경고: 쉬운 원조§!"
