--- a/localisation/french/phi_l_french.yml
+++ b/localisation/french/phi_l_french.yml
@@ -992,3 +992,5 @@ edict_greater_than_ourselves_light:0 "Réinstallation libre"
 edict_greater_than_ourselves_light_desc:1 "Encourage la réinstallation volontaire des populations sans emploi sur des planètes appropriées avec des emplois et un logement au sein de notre empire."
 tr_domination_colonial_viceroys_desc:0 "Les §YDirigeants§! et les §YGouverneurs§! commencent au niveau §Y3§!."
 origin_tooltip_doomsday_effects:2 "§G- ATTENTION : Origine facile§!"
+small10players:0 "Petit Grand"
+mediumover16:0 "Moyen Grand"
