--- a/localisation/german/phi_l_german.yml
+++ b/localisation/german/phi_l_german.yml
@@ -991,3 +991,5 @@ edict_greater_than_ourselves_light:0 "Freie Umsiedlung"
 edict_greater_than_ourselves_light_desc:1 "Fördert die freiwillige Umsiedlung arbeitsloser Populationen auf geeignete Planeten mit Arbeitsplätzen und Wohnraum innerhalb unseres Imperiums."
 tr_domination_colonial_viceroys_desc:0 "§YFührer§! und §YGouverneure§! beginnen auf Stufe §Y3§!."
 origin_tooltip_doomsday_effects:2 "§G- WARNUNG: Einfacher Ursprung§!"
+small10players:0 "Klein Groß"
+mediumover16:0 "Mittel Groß"
