--- a/localisation/italian/phi_l_italian.yml
+++ b/localisation/italian/phi_l_italian.yml
@@ -999,3 +999,5 @@ edict_greater_than_ourselves_light:0 "Ricollocazione libera"
 edict_greater_than_ourselves_light_desc:1 "Incentiva la ricollocazione volontaria delle popolazioni disoccupate su pianeti adeguati con lavoro e alloggi all'interno del nostro impero."
 tr_domination_colonial_viceroys_desc:0 "I §YRuler§! e i §YGovernatori§! iniziano al livello §Y3§!."
 origin_tooltip_doomsday_effects:2 "§G- ATTENZIONE: Origine facile§!"
+small10players:0 "Piccolo Grande"
+mediumover16: "Medio Grande"
