--- a/localisation/korean/phi_l_korean.yml
+++ b/localisation/korean/phi_l_korean.yml
@@ -991,3 +991,5 @@ edict_greater_than_ourselves_light:0 "자유 이주"
 edict_greater_than_ourselves_light_desc:1 "실직한 인구가 제국 내에서 직업과 주거지가 있는 적합한 행성으로 자발적으로 이주하도록 장려합니다."
 tr_domination_colonial_viceroys_desc:0 "§Y지도자§!와 §Y독재자§!는 §Y3§! 레벨에서 시작합니다."
 origin_tooltip_doomsday_effects:2 "§G- 경고: 쉬운 원조§!"
+small10players:0 "작은 큰"
+mediumover16:0 "큰 중간"
