--- a/localisation/spanish/phi_l_spanish.yml
+++ b/localisation/spanish/phi_l_spanish.yml
@@ -991,3 +991,5 @@ edict_greater_than_ourselves_light:0 "Reasentamiento libre"
 edict_greater_than_ourselves_light_desc:1 "Fomenta que las poblaciones desempleadas se reubiquen voluntariamente en planetas adecuados con empleo y vivienda dentro de nuestro imperio."
 tr_domination_colonial_viceroys_desc:0 "Los §YGobernantes§! y §YGobernadores§! comienzan en el nivel §Y3§!."
 origin_tooltip_doomsday_effects:2 "§G- ADVERTENCIA: Origen fácil§!"
+small10players:0 "Pequeño Grande"
+mediumover16:0 "Mediano Grande"
