--- a/localisation/polish/phi_l_polish.yml
+++ b/localisation/polish/phi_l_polish.yml
@@ -991,3 +991,5 @@ edict_greater_than_ourselves_light:0 "Wolna przeprowadzka"
 edict_greater_than_ourselves_light_desc:1 "Zachęca bezrobotnych ludzi do dobrowolnej przeprowadzki na odpowiednie planety z pracą i mieszkaniem w naszym imperium."
 tr_domination_colonial_viceroys_desc:0 "§YWładcy§! i §YGubernatorzy§! zaczynają na poziomie §Y3§!."
 origin_tooltip_doomsday_effects:2 "§G- Uwaga: Łatwe Początki§!"
+small10players:0 "Mały Duży"
+mediumover16:0 "Średni Duży"
