--- a/localisation/simp_chinese/phi_l_simp_chinese.yml
+++ b/localisation/simp_chinese/phi_l_simp_chinese.yml
@@ -990,3 +990,5 @@ edict_greater_than_ourselves_light:0 "自由移民"
 edict_greater_than_ourselves_light_desc:1 "鼓励失业人口自愿迁移到我们帝国内的合适星球，提供工作和住房。"
 tr_domination_colonial_viceroys_desc:0 "§Y统治者§!和§Y总督§!从§Y3§!级开始。"
 origin_tooltip_doomsday_effects:2 "§G- 警告：易起源§！"
+small10players:0 "小大"
+mediumover16:0 "中大"
